<resources>
    <string name="app_name">Construction Project Document Management</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_assigned_task">Tác vụ được giao</string>
    <string name="menu_created_task">Tác vụ đã tạo</string>
    <string name="menu_relative_task">Tác vụ theo dõi</string>
    <string name="menu_take_leave">Xin nghỉ phép</string>
    <string name="menu_leave_list">Xem danh sách nghỉ phép</string>
    <string name="menu_leave_list_admin">Duyệt đơn nghỉ phép</string>
    <string name="view_staff_leave_manager">Duyệt đơn nghỉ phép</string>
    <string name="view_staff_leave">Xem danh sách nhân viên nghỉ</string>
    <string name="action_settings">Xem danh sách nghỉ phép</string>
    <string name="menu_notification">Thông báo</string>
    <string name="menu_log_out">Đăng xuất</string>


</resources>
